--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
       ddl-auto: update
     show-sql: false
     open-in-view: true
+openai:
+  model: "gpt-3.5-turbo"
+  api:
+    key: "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"
+    url: "https://api.openai.com/v1/chat/completions"
