--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,18 @@
             <version>0.11.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.2.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.postgresql</groupId>
